--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
+                <!-- Google font -->
+            <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
+
+            <!-- Bootstrap -->
+            <link type="text/css" rel="stylesheet" href="{{asset('Assets/css/bootstrap.min.css')}}"/>
+
+            <!-- Slick -->
+            <link type="text/css" rel="stylesheet" href="{{asset('Assets/css/slick.css')}}"/>
+            <link type="text/css" rel="stylesheet" href="{{asset('Assets/css/slick-theme.css')}}"/>
+
+            <!-- nouislider -->
+            <link type="text/css" rel="stylesheet" href="{{asset('Assets/css/nouislider.min.css')}}"/>
+
+            <!-- Font Awesome Icon -->
+            <link rel="stylesheet" href="{{asset('Assets/css/font-awesome.min.css')}}">
+
+            <!-- Custom stlylesheet -->
+            <link type="text/css" rel="stylesheet" href="{{asset('Assets/css/style.css')}}"/>
+
+            <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+            <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+            <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+            <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+            <![endif]-->
         {% endblock %}
 
         {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
+            <!-- jQuery Plugins -->
+            <script src="{{ asset('Assets/js/jquery.min.js') }}"></script>
+            <script src="{{ asset('Assets/js/bootstrap.min.js') }}"></script>
+            <script src="{{ asset('Assets/js/slick.min.js') }}"></script>
+            <script src="{{ asset('Assets/js/nouislider.min.js') }}"></script>              
+            <script src="{{ asset('Assets/js/jquery.zoom.min.js') }}"></script>
+            <script src="{{ asset('Assets/js/main.js') }}"></script>
         {% endblock %}
     </head>
     <body>
