--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello RegisterController!{% endblock %}
+{% block title %}Sign Up{% endblock %}
 
 {% block body %}
 {{ form(registerForm) }}
