--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -6,6 +6,12 @@
 {% for flash_message in app.session.flashbag.get('error') %}
     <div class="alert alert-danger">{{ flash_message }}</div>
 {% endfor %}
+{% for flash_message in app.session.flashbag.get('success') %}
+    <div class="alert alert-success">{{ flash_message }}</div>
+{% endfor %}
+{% for flash_message in app.session.flashbag.get('info') %}
+    <div class="alert alert-info">{{ flash_message }}</div>
+{% endfor %}
 
 <form method="post">
     {% if error %}
