--- a/templates/partner/store/new.html.twig
+++ b/templates/partner/store/new.html.twig
@@ -16,7 +16,7 @@
 <br>
     <h1>Create new Store</h1>
 
-    {{ include('partner/store/_form.html.twig') }}
+    {{ include('admin/store/_form.html.twig') }}
 
     <a href="{{ path('app_partner') }}">back to list</a>
 {% endblock %}
