All Cancel Payment

--- a/templates/client/historique.html.twig
+++ b/templates/client/historique.html.twig
@@ -76,7 +76,10 @@
 			<td>
 			</td>
 			<td>
-				<a href="{{path('app_commande_delete' ,{'id': completeCommande.id})}}" > Delete</a>
+			{% if completeCommande.etat == "Pending" %}
+				
+<a href="{{ path('app_commande_delete', {'id': completeCommande.id}) }}" onclick="return confirm('Are you sure you want to cancel this order?')">Cancel</a>
+			{% endif %}
 			</td>
 
 		</tr>
@@ -86,7 +89,10 @@
 	
 {% set total=0 %} 
 				{% for detail in selecteddetails %}
+				    	{% if detail.etat != "Canceled" %}
+
     {% set total = total + detail.produit.prix * detail.quantite %}
+	{% endif %}
 					<div class="cart-list">
 						<div class="product-widget">
 							<div
@@ -103,7 +109,11 @@
 									{{detail.produit.prix}}</h4>
 										<div class="cart-summary">
 					
+					{% if detail.etat != "Canceled" %}
 					<h5> ____Sub = {{detail.prixtotal}} </h5>
+					{% else %}
+					<p> ____Sub = {{detail.prixtotal}} </p>					
+						{% endif %}
 				
 				</div>
 							</div>
@@ -113,6 +123,12 @@
 						
 						</div>
 					</div>
+						{% if detail.etat != "Canceled" %}
+					<div>
+<a href="{{ path('app_detailcommande_delete', {'id': detail.id}) }}" onclick="return confirm('Are you sure you want to cancel this order?')">Cancel</a>
+
+					</div>
+					{% endif %}
 
 
 				{% endfor %}
