--- a/templates/admin/store/show.html.twig
+++ b/templates/admin/store/show.html.twig
@@ -23,7 +23,7 @@
                 <th>Photo</th>
                 <td>
                     {% if store.photo is not empty %}
-                        <img src="{{ asset('img/' ~ store.photo) }}" alt="{{ store.nom }} photo">
+                        <img src="{{ asset('' ~ store.photo) }}" alt="{{ store.nom }} photo">
                     {% endif %}
                 </td>
             </tr>
