--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -60,6 +60,7 @@
 {# Contact #}
 <link rel="stylesheet" type="text/css" href="{{ asset('Assets/styles/contact_styles.css')}}">
 <link rel="stylesheet" type="text/css" href="{{ asset('Assets/styles/contact_responsive.css')}}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
         {% endblock %}
 
@@ -89,6 +90,7 @@
         <script src="{{ asset('Assets/plugins/OwlCarousel2-2.2.1/owl.carousel.js')}}"></script>
         <script src="{{ asset('Assets/plugins/easing/easing.js')}}"></script>
         <script src="{{ asset('Assets/js/custom.js')}}"></script> 
+        
         {# Categories #}
 		<script src="{{ asset('Assets/plugins/jquery-ui-1.12.1.custom/jquery-ui.js')}}"></script>
         <script src="{{ asset('Assets/js/categories_custom.js')}}"></script>
