--- a/templates/partner/store/edit.html.twig
+++ b/templates/partner/store/edit.html.twig
@@ -19,5 +19,5 @@
 
     {{ include('partner/store/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_partner') }}">back to list</a>
+    <a href="{{ path('app_partner') }}">back to Store</a>
 {% endblock %}
