--- a/templates/partner/store/show.html.twig
+++ b/templates/partner/store/show.html.twig
@@ -96,5 +96,9 @@
         </tr>
     </tbody>
 </table>
-<a href="{{ path('app_store_edit_partner', {'id': store.id}) }}">Edit</a>
+{% if app.user.getRoles() == 'ROLE_PARTNER' %}
+    <a href="{{ path('app_store_edit_partner', {'id': store.id}) }}">Edit</a>
+{% endif %}
+
+
 {% endblock %}
