--- a/templates/reclamation/addreclamationtype.html.twig
+++ b/templates/reclamation/addreclamationtype.html.twig
@@ -3,15 +3,26 @@
 {% block title %}Add Reclamation Type{% endblock %}
 
 {% block body %}
-    <h1 class="text-center">Add Reclamation Type</h1>
+    <div class="container d-flex justify-content-center">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="card-title text-center mb-4">Add Reclamation Type</h1>
 
-    {{ form_start(form) }}
-        {{ form_row(form.nom) }}
+                    {{ form_start(form) }}
+                        <div class="form-group">
+                            {{ form_label(form.nom, 'Name:', {'label_attr': {'class': 'font-weight-bold'}}) }}
+                            {{ form_widget(form.nom, {'attr': {'class': 'form-control'}}) }}
+                        </div>
 
-        <button type="submit" class="btn btn-primary">Add Reclamation Type</button>
-    {{ form_end(form) }}
+                        <button type="submit" class="btn btn-primary">Add Reclamation Type</button>
+                    {{ form_end(form) }}
 
-    {% for flash_message in app.session.flashbag.get('success') %}
-        <div class="alert alert-success">{{ flash_message }}</div>
-    {% endfor %}
+                    {% for flash_message in app.session.flashbag.get('success') %}
+                        <div class="alert alert-success mt-4">{{ flash_message }}</div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
