--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -365,20 +365,28 @@
 							<!-- Slide 1 -->
 
 							{% for e in events %}
-							<h3><a href="{{ path('app_evenement_index', {'id': e.id}) }}">{{e.titreEv}}</a></h3>
 							<div class="owl-item product_slider_item">
 								<div class="product-item">
 									<div class="product discount">
 										<div class="product_image">
 											{# <img src="{{ asset('Assets/images/product_1.png')}}" alt=""> #}
-											{{e.imageEv}}
+											{% if e.imageEv %}
+												{% set imageUrl = vich_uploader_asset(e, 'imageFile') %}
+												<img src="{{ asset(imageUrl) }}" alt="img" />
+											{% endif %}
 										</div>
 										<div class="favorite favorite_left"></div>
 										<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>-$20</span></div>
 										<div class="product_info">
-											<h6 class="product_name"><a href="single.html">{{e.titreEv}}</a></h6>
-											<div class="product_price">{{e.DescEv}}<span>{{e.lieuEv}}</span></div>
+											<h6 class="product_name mt-5"><a href="{{path('app_event_detail', {'id': e.id})}}">{{e.titreEv}}</a></h6>
+											<div class="product_price">{{e.DescEv}}</div>
+											<div class="product_price">{{e.lieuEv}}</div>
 										</div>
+										<div class="product_info">
+											<div class="product_price"> Nombre {{e.NbMax}}</div>
+										</div>
+										<div class="red_button add_to_cart_button"><a href="{{path('app_event_detail', {'id': e.id})}}">Reserver</a></div>
+
 									</div>
 								</div>
 							</div>
