--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -9,7 +9,7 @@
 
 
         <title>{% block title %}Welcome!{% endblock %}</title>
-       
+       <link rel="stylesheet" href="{{ asset('bundles/mercuryseriesflashy/css/flashy.css') }}">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
 
@@ -22,6 +22,7 @@
             <link rel="stylesheet" href="{{ asset('DashAssets/vendor/css/core.css')}}" class="template-customizer-core-css" />
             <link rel="stylesheet" href="{{ asset('DashAssets/vendor/css/theme-default.css')}}" class="template-customizer-theme-css" />
             <link rel="stylesheet" href="{{ asset('DashAssets/css/demo.css')}}" />
+            
 
             <!-- Vendors CSS -->
             <link rel="stylesheet" href="{{ asset('DashAssets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css')}}" />
@@ -32,6 +33,7 @@
 
             <!-- Helpers -->
             <script src="{{ asset('DashAssets/vendor/js/helpers.js')}}"></script>
+           
 
             <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
             <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
@@ -275,7 +277,12 @@
       <div class="layout-overlay layout-menu-toggle"></div>
     </div>
     <!-- / Layout wrapper -->
-
+ <!-- Flashy depends on jQuery -->
+    <script src="//code.jquery.com/jquery.js"></script>
+    <!-- Load Flashy default JavaScript -->
+    <script src="{{ asset('bundles/mercuryseriesflashy/js/flashy.js') }}"></script>
+    <!-- Include Flashy default partial -->
+    {{ include('@MercurySeriesFlashy/flashy.html.twig') }}
     </body>
 </html>
 
