--- a/templates/evenement/show.html.twig
+++ b/templates/evenement/show.html.twig
@@ -27,7 +27,10 @@
             </tr>
             <tr>
                 <th>ImageEv</th>
-                <td>{{ evenement.imageEv }}</td>
+                <td>{% if evenement.imageEv %}
+												{% set imageUrl = vich_uploader_asset(evenement, 'imageFile') %}
+												<img style="width:75px;" src="{{ asset(imageUrl) }}" alt="img" />
+											{% endif %}</td>
             </tr>
             <tr>
                 <th>LieuEv</th>
@@ -53,4 +56,33 @@
     <a href="{{ path('app_evenement_edit', {'id': evenement.id}) }}">edit</a>
 
     {{ include('evenement/_delete_form.html.twig') }}
+
+    <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                Reserver
+            </button>
+
+    <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">New Event Type</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        {{form_start(form)}}
+       
+        {{form_errors(form)}}
+
+        {{form_end(form)}}
+      </div>
+      <div class="modal-footer">
+        {# <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> #}
+        {# <button type="submit" class="btn btn-primary">Save changes</button> #}
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
