--- a/templates/evenement/showadmin.html.twig
+++ b/templates/evenement/showadmin.html.twig
@@ -48,7 +48,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_evenement_index') }}">back to list</a>
+    <a href="{{ path('app_events_index') }}">back to list</a>
 
     <a href="{{ path('app_evenement_edit', {'id': evenement.id}) }}">edit</a>
 
