--- a/templates/event_type/index.html.twig
+++ b/templates/event_type/index.html.twig
@@ -30,7 +30,7 @@
         {% endfor %}
         </tbody>
     </table>
-    <a href="{{ path('app_evenement_index') }}">back to event</a>
+    <a href="{{ path('app_events_index') }}">back to event</a>
     <br></br>
 
     <a href="{{ path('app_event_type_new') }}">Create new</a>
