--- a/templates/admin/store/index.html.twig
+++ b/templates/admin/store/index.html.twig
@@ -4,7 +4,40 @@
 
 {% block body %}
     <h1>Store index</h1>
+<form action="{{ path('app_store_index') }}" method="get">
+    <input type="text" name="nom">
+    <select  name="localtion">
+ <option value="">None</option>
+ <option value="Ariana">Ariana</option>
+  <option value="Beja">Beja</option>
+  <option value="Ben Arous">Ben Arous</option>
+  <option value="Bizerte">Bizerte</option>   
+  <option value="Gabes">Gabes</option>    
+  <option value="Gafsa">Gafsa</option>    
+  <option value="Jendouba">Jendouba</option>    
+  <option value="Kairouan">Kairouan</option>    
+  <option value="Kasserine">Kasserine</option>    
+  <option value="Kebili">Kebili</option>  
+  <option value="Kef">Kef</option>    
+  <option value="Mahdia">Mahdia</option>      
+    <option value="Manouba">Manouba</option>   
+  <option value="Medenine">Medenine</option>    
+  <option value="Monastir">Monastir</option>    
+  <option value="Nabeul">Nabeul</option>    
+  <option value="Sfax">Sfax</option>    
+  <option value="Sidi Bouzid">Sidi Bouzid</option>    
+  <option value="Siliana">Siliana</option>  
+  <option value="Sousse">Sousse</option>    
+  <option value="Tataouine">Tataouine</option>     
+    <option value="Tozeur">Tozeur</option>   
+  <option value="Tunis">Tunis</option>    
+  <option value="Zaghouan">Zaghouan</option>    
+  
 
+
+  </select>
+    <button type="submit">Filter</button>
+    </form>
     <table class="table">
         <thead>
             <tr>
@@ -25,7 +58,7 @@
                 <td>{{ store.location }}</td>
                 <td>
                     {% if store.photo is not empty %}
-                        <img src="{{ asset('' ~ store.photo) }}" alt="{{ store.nom }} photo">
+                        <img width="100px" src="{{ asset('/Assets/images/' ~ store.photo) }}" alt="{{ store.nom }} photo">
                     {% endif %}
                 </td>
                 <td>{{ store.categorie.libelle }}</td>
